Refactor: Revert to argparse, update README and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 # Abaikan semua file XML asli
-Data/*.xml
+*.xml
 
 # Abaikan folder hasil modifikasi
+Data/
 Data/modified/
 
 # Abaikan folder logs dan semua file log
+logs/
 Data/logs/
 Data/logs/*.log
 
 # Abaikan dependensi Python jika ada virtual environment
 venv/
+/emirEnv/
 .env
 
 # Abaikan file cache Python
